# BattleSheep

./: .gitignore
engine/: CMakeLists.txt  Game.cpp  Game.hpp  Hex.cpp  Hex.hpp  Map.cpp  Map.hpp  Point.hpp  main.cpp
sfml-gui/: CMakeLists.txt  GuiHex.cpp  GuiHex.hpp  GuiMap.cpp  GuiMap.hpp  Orientation.hpp  Textbox.cpp  Textbox.hpp  main.cpp
src/: CMakeLists.txt  Hex.hpp  Layout.hpp  Map.cpp  Map.hpp  Orientation.hpp  Point.hpp
